# Bayezid-Hybrid-SOC-Environment-V0.3.5

./: DO_NOT_OPEN.md  README.md  SECURITY.md
Bayezid Fighter/: .gitignore  adwin_state.pkl  aiService.js  authMiddleware.js  bayezidBrain.js  chimeraEngine.js  compile_circuit.js  ewc_state.pkl  federationSwarm.js  galileoEngine.js  hydraC2.js  kernelStriker.js  kineticEvolver.js  kineticFilter.js  lstm_model.pth  matrixShell.js  memoryService.js  mnemonProbe.js  oracleAgent.js  oracleGNN.js  package-lock.json  package.json  phantomML.js  postcss.config.js  server.js  setup_circom.js  shadowMirror.js  sigmaEngine.js  swarmCrypto.js  swarm_private.pem  swarm_public.pem  tailwind.config.js  testSwarm.js  threatGrapher.js  veritasProof.js  wargamingEngine.js
Bayezid Fighter/_deprecated/: testTuning.v0.3.5.js  tuningService.v0.3.5.js
Bayezid Fighter/brain_training_data/: finetune_dataset.jsonl
Bayezid Fighter/circuits/: decision_proof.circom  decision_proof.r1cs  decision_proof.sym  decision_proof_0000.zkey  decision_proof_final.zkey  pot12_0001.ptau
Bayezid Fighter/docs/: AGI_TELEPATHY_PROPOSAL.md  PHASE_10_AGI_EVOLUTION.md  PHASE_10_PROPOSAL.md  sacrificial_twin.yml  static_analysis.md
Bayezid Fighter/ebpf_module/: ebpf_neural_net.c  xdp_striker.c
Bayezid Fighter/forensics_reports/: JIRA-4937.md  JIRA-6654.md  JIRA-6807.md
Bayezid Fighter/misp-local/: docker-compose.yml
Bayezid Fighter/ml_engine/: adwin_state.pkl  bayezid_model.pkl  (+11 more)
Bayezid Fighter/native/: CMakeLists.txt
Bayezid Fighter/native/linux/: mem_scanner_linux.cpp  syscall_relay.c  xdp_telemetry_relay.c
Bayezid Fighter/native/windows/: etw_monitor.cpp  mem_scanner_win.cpp  wfp_striker.cpp
(+184 files in other folders)
